# DS776

./: .env_home  .gitignore  Configuration_Sample.ipynb  Course_Outline (1).html  Course_Outline.html  Course_Outline.ipynb  Course_Outline_generator.ipynb  Course_Outline_orig.ipynb  L02_3_FashionMNIST_CNN - Copy.ipynb  README.md  config.json  idlmamv2.py  mac.env  make_student_version.ipynb  organize_subtitles.ipynb  pyproject.toml
Lesson_00_Course_Intro_and_Materials/: L00_0_Overview.ipynb
Lesson_01/: 0_Overview.ipynb  4_Activation Functions.ipynb  5_Canvas_Quiz_Questions.ipynb  Activation Functions.ipynb  Classification_2D.ipynb  L01_0_Overview.html  L01_0_Overview.ipynb  L01_2_Nonlinear_Regression_1D_VIDEO.ipynb  L01_6_Homework.ipynb  Lesson_01_Homework.ipynb  Lesson_01_Overview.ipynb  Nonlinear_Regression_1D.ipynb  Nonlinear_Regression_1D_ReLU.ipynb
Lesson_01_Neural_Networks/: L01_0_Overview.ipynb  L01_1_Class_and_Lesson_Intro_VIDEO.ipynb  L01_2_Nonlinear_Regression_1D.ipynb  L01_2_Nonlinear_Regression_1D_VIDEO.ipynb  L01_3_Classification_2D.ipynb  L01_3_Classification_2D_VIDEO.ipynb  L01_Canvas_Quiz_Questions.ipynb  L01_Homework.ipynb  TEST.ipynb
Lesson_02/: 0_Overview.ipynb  L02_0_Overview.html  L02_0_Overview.ipynb  L02_1_MNIST_FC_VIDEO.ipynb  L02_3_MNIST_CNN_VIDEO.ipynb  (+4 more)
introdl/: README.md  config.py  pyproject.toml
introdl/src/introdl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
introdl/src/introdl/idlmam/: __init__.py  idlmam.py
introdl/src/introdl/utils/: __init__.py  utils.py
introdl/src/introdl/visul/: __init__.py  visul.py  visul_backup.py
(+265 files in other folders)
