[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "introdl"
version = "1.0"
description = "Introductory Deep Learning Package"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "IPython",
    "ipywidgets",
    "ipycanvas",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "torch",
    "torchinfo",
    "torchvision",
    "tqdm"
]

[tool.setuptools]
package-dir = {"" = "src"}  # Tell setuptools where to find your packages
packages = {find = {where = ["src"]}}  # Use find directive for package discovery
